--- a/P3-Report.ipynb
+++ b/P3-Report.ipynb
@@ -15,10 +15,14 @@
     "<a href=https://www.openstreetmap.org/relation/1293250>OpenStreetMap: Taipei City, Taiwan</a>  \n",
     "<a href=https://mapzen.com/data/metro-extracts>MapZen</a>: <span style=\"font-family: Times New Roman; letter-spacing: 0.6px\">search for \"Taipei, City, Taiwan\"</span>  \n",
     "<br/>\n",
+    "**<span style=\"font-size: 15pt; font-family: Georgia;\">Acknowledge</span>**  \n",
+    "<a href=http://tools.5432.tw>Taiwan postal code search API</a>  \n",
+    "<br/>\n",
     "<p style=\"font-size: 13pt; font-family: Georgia; letter-spacing: 0.6px\">\n",
     "It has been about 5 years since I left Taipei city where I had been living for 6 years.  \n",
     "Therefore, I am interested in having an insight into the map data of Taipei, Taiwan.  \n",
     "</p>\n",
+    "\n",
     "<hr/>"
    ]
   },
@@ -59,7 +63,7 @@
    "source": [
     "<span style=\"font-size: 13pt; font-family: Georgia; letter-spacing: 0.6px\">\n",
     "In order to make the investigation more efficient,  \n",
-    "I would like to transform the shape of the address into following structure:   \n",
+    "I would like to shape the address into following structure:   \n",
     "```json\n",
     "\"address\": {\"city\": \"city name\",\n",
     "            \"district\": \"district name\",\n",
@@ -104,7 +108,7 @@
     "<span style=\"font-size: 13pt; letter-spacing: 0.6px\">\n",
     "in the osm file. Thus, it is necessary to check if it is road or street.  \n",
     "For the case of that some address tags lost in the breakdown structure, the full address would be broken dwon to insert into the dictionary if it exists.  \n",
-    "Furthermore, some city tags and road/street tags content the other information not belongs to them.  \n",
+    "Furthermore, some city tags and road/street tags contain the other information not belongs to them.  \n",
     "</span>\n",
     "ex. ```<tag k=\"addr:city\" v=\"臺北市大安區\"/>``` or ```<tag k=\"addr:street\" v=\"羅斯福路四段\"/>```  \n",
     "(```<tag k=\"addr:city\" v=\"Da'an Dist. Taipei City\"/>```, ```<tag k=\"addr:street\" v=\"Sec. 4th, Roosevelt Rd.\"/>```)  \n",
@@ -114,9 +118,9 @@
     "The results indicate that it is necessary to wirte a function to solve this problem because the amount is not few.  \n",
     "</span>\n",
     "```shell\n",
-    "> db.mycol.aggregate([{'$match': {'address.city':{'$exists':1}}},\n",
-    "                      {'$group':{'_id':'$address.city','count':{'$sum':1}}},\n",
-    "                      {'$sort':{'count':-1}}])\n",
+    "> db.mycol.aggregate([{'$match': {'address.city': {'$exists': 1}}},\n",
+    "                      {'$group': {'_id': '$address.city', 'count': {'$sum':1}}},\n",
+    "                      {'$sort': {'count': -1}}])\n",
     "{ \"_id\" : \"臺北市\", \"count\" : 1077 }\n",
     "{ \"_id\" : \"台北市\", \"count\" : 951 }\n",
     "{ \"_id\" : \"新北市\", \"count\" : 337 }\n",
@@ -160,6 +164,10 @@
     "Type \"it\" for more\n",
     "> \n",
     "```\n",
+    "<span style=\"font-size: 13pt; letter-spacing: 0.6px\">\n",
+    "Eventually, I collected the information of postal code and \"address:full\" only if \"address:full\" exists. Otherwise, all the address tag would be collected. And then I broke down all the address information to create address dictionary like the structure shown above.  \n",
+    "Meanwhile, valid postal code was collected from \"address:postcode\" first or \"address:full\". If both information does not exist, then the postal code will be obtained by API, which will be discussed below.  \n",
+    "</span>\n",
     "<br/>\n",
     "\n",
     "**<span style=\"font-size: 13pt\">- Inconsistent phone number</span>**    \n",
@@ -169,8 +177,50 @@
     "&nbsp;&nbsp;&#149;&nbsp;_Some phone numbers are the mobile phone number._  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp;ex. +886 937672988  \n",
     "&nbsp;&nbsp;&#149;&nbsp;_Some nodes have more than one phone number._  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;ex. ```<tag k=\"phone\" v=\"+886-2-2345-6789; +886 2 2345 6789\"/>```    \n",
-    "<br/>  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;ex. ```<tag k=\"phone\" v=\"+886-2-1234-5678; +886 2 2345 6789\"/>```  \n",
+    "\n",
+    "<span style=\"font-size: 13pt; letter-spacing: 0.6px\">\n",
+    "In order to fix this problem, I arranged the phone numbers into an array and reformated them as follows:  \n",
+    "</span>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;ex. ```{\"phone\": [\"+886-2-1234-5678\", \"+886-2-2345-6789\"]}```  \n",
+    "<span style=\"font-size: 13pt; letter-spacing: 0.6px\">\n",
+    "To confrim the function can treat all the phone numbers well, I confrimed the data by following query:\n",
+    "```shell\n",
+    "> db.mycol.aggregate([{'$match': {'phone':{'$exists':1}}}, \n",
+    "                      {'$group': {'_id':'$phone','count':{'$sum':1}}},\n",
+    "                      {'$sort':{'count':-1}}])\n",
+    "{ \"_id\" : \"+886975551156\", \"count\" : 7 }\n",
+    "{ \"_id\" : \"+886-2-2381-3135\", \"count\" : 4 }\n",
+    "{ \"_id\" : \"+886(2)27126390\", \"count\" : 4 }\n",
+    "{ \"_id\" : \"+886(2)25702330#6199\", \"count\" : 3 }\n",
+    "{ \"_id\" : \"+886-2-27274168\", \"count\" : 2 }\n",
+    "{ \"_id\" : \"+886 2 2348 3456\", \"count\" : 2 }\n",
+    "{ \"_id\" : \"+886(2)27325315\", \"count\" : 2 }\n",
+    "{ \"_id\" : \"+886 2 89696550\", \"count\" : 2 }\n",
+    "{ \"_id\" : \"+886-2-2322-8000\", \"count\" : 2 }\n",
+    "{ \"_id\" : \"+886(9)22323366\", \"count\" : 1 }\n",
+    "{ \"_id\" : \"+886(02)88664433\", \"count\" : 1 }\n",
+    "{ \"_id\" : \"+886(2)28963910\", \"count\" : 1 }\n",
+    "{ \"_id\" : \"+886-2-66250899\", \"count\" : 1 }\n",
+    "{ \"_id\" : \"+886-2-2579-2065\", \"count\" : 1 }\n",
+    "{ \"_id\" : \"+886 2 2523 5000\", \"count\" : 1 }\n",
+    "{ \"_id\" : \"+886-2-27135211\", \"count\" : 1 }\n",
+    "{ \"_id\" : \"+886255713333\", \"count\" : 1 }\n",
+    "{ \"_id\" : \"+886-2-25519321\", \"count\" : 1 }\n",
+    "{ \"_id\" : \"+886-2-2397-1377\", \"count\" : 1 }\n",
+    "Type \"it\" for more\n",
+    "> \n",
+    "```\n",
+    "<span style=\"font-size: 13pt; letter-spacing: 0.6px\">\n",
+    "Besides, I also found some phone numbers with extension code as follows, and their formats are not consistent.  \n",
+    "This problem would be solved in audit process.\n",
+    "</span>\n",
+    "\n",
+    "```{ \"_id\" : \"+886(2)25702330#6199\", \"count\" : 3 }```  \n",
+    "```{ \"_id\" : \"+886 2 1234 5678;02 12345678;+886-937123456;+886(02)12345678\", \"count\" : 1 }```  \n",
+    "```{ \"_id\" : \"(02)2236-8225#63302、63304\", \"count\" : 1 }```  \n",
+    "```{ \"_id\" : \"+886-2-33169908轉0252\", \"count\" : 1 }```  \n",
+    "轉 means extension.\n",
     "\n",
     "**<span style=\"font-size: 13pt\">- Inconsistent postal code</span>**  \n",
     "<span style=\"font-size: 13pt; letter-spacing: 0.6px\">\n",
@@ -186,8 +236,8 @@
     "http://zip5.5432.tw/zip5json.py?adrs=臺北市大安區羅斯福路四段1號 \n",
     "```  \n",
     "<span style=\"font-size: 13pt; letter-spacing: 0.6px\">**respond:**</span>  \n",
-    "```\n",
-    "JSON{\n",
+    "```JSON\n",
+    "{\n",
     "\"dataver\": \"10312\", \n",
     "\"adrs\": \"10617臺北市大安區羅斯福路四段1號\", \n",
     "\"zipcode\": \"10617\", \n",
@@ -210,8 +260,6 @@
     "<span style=\"font-size: 13pt; letter-spacing: 0.6px\">\n",
     "I added one regex pattern more and extracted the \"emergency\" information only. Because I am interested in how many emergency place in Taipei City.    \n",
     "</span>\n",
-    "\n",
-    "\n",
     "<br/>  \n",
     "\n",
     "**<span style=\"font-size: 13pt\">- Second-level tag k's value is \"type\"</span>**  \n",
@@ -251,14 +299,13 @@
     "\n",
     "<span style=\"font-size: 13pt; letter-spacing: 0.6px\">\n",
     "To solve this problem, the simple way is to change the key value if the tag k's value = \"type\".\n",
-    "In order to decide new key value, I check tag k's value of these 23 documents by following query.\n",
+    "In order to decide new key value, I checked tag k's value of these 23 documents by following query.\n",
     "</span>\n",
     "\n",
     "```shell\n",
-    "> db.mycol.aggregate([{'$match': {'type':{'$nin':['node','way']}}},\n",
-    "                      {'$group':{'_id':'$type','count':{'$sum':1}}},\n",
-    "                      {'$sort':{'count':-1}}])\n",
-    "                      \n",
+    "> db.mycol.aggregate([{'$match': {'type': {'$nin' :['node', 'way']}}},\n",
+    "                      {'$group': {'_id': '$type','count': {'$sum': 1}}},\n",
+    "                      {'$sort': {'count': -1}}])\n",
     "{ \"_id\" : \"multipolygon\", \"count\" : 2 }\n",
     "{ \"_id\" : \"water\", \"count\" : 2 }\n",
     "{ \"_id\" : \"Chinese\", \"count\" : 2 }\n",
@@ -278,35 +325,30 @@
     "As the results shown above, it is hard to define a general value of the key. Eventually the decision is to change the key value to \"inside_type\".  \n",
     "</span>\n",
     "</div>\n",
-    "<br/>"
+    "<hr />"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<span style=\"font-size: 13pt\">- Inconsistent chinese characters</span>**  \n",
-    "There are two characters stand for \"Tai\", which are \"台\" and \"臺\".  \n",
-    "<span style=\"font-size: 13pt; font-family: Georgia; letter-spacing: 0.6px\">\n",
-    "Just apply the replace method to change \"台\" into \"臺\". And it only check the address tag.</span>\n",
-    "<br/>  \n",
     "\n",
-    "**<span style=\"font-size: 13pt\">- ASCII code contented in the string</span>**  \n",
-    "&nbsp;&nbsp;&#149;&nbsp;ex.  ```&#38;``` or ```&#amp;``` => &#38;  \n",
-    "&nbsp;&nbsp;&#149;&nbsp;ex.  ```&#39;``` => &#39;  \n",
-    "<br/>  \n",
+    "<h2 style=\"font-family: Georgia;\">Section 2. Overview of the Data</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"font-family: Georgia\">\n",
+    "**<span style=\"font-size: 13pt\">- File Size</span>**  \n",
     "\n",
-    "&nbsp;&nbsp;&#149;&nbsp;_District tag has different format._  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;ex. \"大安區\" and \"大安\" which means \"Da'an district\" and \"Da'an\" respectively.  \n",
-    "<span style=\"font-size: 13pt; font-family: Georgia; letter-spacing: 0.6px\">\n",
-    "This problem would be solved with the above problem. Just separate the address with expecting format.  \n",
-    "For the last sub-problem, only check </span>```k=\"addr:district\"```\n",
-    "<br/>  \n"
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -334,7 +376,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
